...
		Slider(
			value = sliderPosition,
			onValueChange = { sliderPosition = it },
			valueRange = 0f..10f,
			steps = 9,
			enabled = !isRatingInProgress,
			modifier = Modifier.testTag("Rating Slider"),
		)
		Text(
			text = ratingLabelProvider(sliderPosition),
			modifier = Modifier.testTag("Rating Text")
		)
		Row(modifier = Modifier.padding(top = 8.dp)) {
			Button(
				onClick = {
					if (isRated) {
						onChange(sliderPosition)
					} else {
						onRate(sliderPosition)
					}
				},
				enabled = !isRatingInProgress,
				modifier = Modifier.testTag("Rate Button")
			) {
				Text(text = if (isRated) changeLabel else rateLabel)
			}
			if (isRated) {
				Spacer(modifier = Modifier.padding(horizontal = 8.dp))
				OutlinedButton(
					onClick = onDelete,
					enabled = !isRatingInProgress,
					modifier = Modifier.testTag("Delete Rating Button")
				) {
					Text(text = deleteLabel)
				}
			}
		}
	}
...
