<resources>

	<!-- Bottom Nav Menu -->
	<string name="movies">Movies</string>
	<string name="tv">Tv</string>
	<string name="search">Search</string>
	<string name="account">Account</string>
	<string name="top_rated_tv">Top Rated TV</string>
	<string name="genre_movies">%1$s Based Movies</string>
</resources>